Avoid display:contents to fix jumpiness on popover open

--- a/packages/components/src/Filter/Filter/Filter.module.css
+++ b/packages/components/src/Filter/Filter/Filter.module.css
@@ -1,3 +1,6 @@
-.filter {
-  display: contents;
+/* keep max-width value in sync with other places using this container */
+@container filter-bar-wrapper (max-width: 767px) {
+  .filter {
+    flex-basis: 100%;
+  }
 }
